RESOLVED FIXED160758
Fix crash when changing cookie accept policy after r204327
https://bugs.webkit.org/show_bug.cgi?id=160758
Summary Fix crash when changing cookie accept policy after r204327
Alex Christensen
Reported 2016-08-10 16:48:30 PDT
Fix crash when changing cookie accept policy after r204327
Attachments
Patch (4.06 KB, patch)
2016-08-10 16:49 PDT, Alex Christensen
no flags
Patch (10.48 KB, patch)
2016-08-10 18:11 PDT, Alex Christensen
simon.fraser: review+
Alex Christensen
Comment 1 2016-08-10 16:49:47 PDT
Alex Christensen
Comment 2 2016-08-10 18:11:46 PDT
Alex Christensen
Comment 3 2016-08-10 18:15:43 PDT
Alex Christensen
Comment 4 2016-08-11 13:23:20 PDT
Note You need to log in before you can comment on or make changes to this bug.