Fix crash when changing cookie accept policy after r204327 https://bugs.webkit.org/show_bug.cgi?id=160758

Reviewed by Simon Fraser.

Source/WebKit2:

* WebProcess/WebCoreSupport/mac/WebFrameNetworkingContext.mm:
(WebKit::WebFrameNetworkingContext::setCookieAcceptPolicyForAllContexts):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit2Cocoa/CookieAcceptPolicy.mm: Added.
(-[CookieAcceptPolicyMessageHandler userContentController:didReceiveScriptMessage:]):
(TEST):
* TestWebKitAPI/Tests/WebKit2Cocoa/CookieMessage.html: Added.



Canonical link: https://commits.webkit.org/178876@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204365 268f45cc-cd09-0410-ab3c-d52691b4dbfc